Remove file manager.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
-DIST_SUBDIRS = hints man hlp
-SUBDIRS = hints man hlp
+DIST_SUBDIRS = man hlp
+SUBDIRS = man hlp
 
 DOCS = FAQ HACKING INSTALL INSTALL.FAST MAINTAINERS README.QNX keybind-migration.txt
 EXTRA_DIST = $(DX_CONFIG) doxygen-include.am $(DOCS)
