(NOT FINISHED) Ticket #3138: mcedit: fix broken REDO.
Initial step: refacroing of undo/redo engine of mcedit.
Move undo/redo engine to separate classes.

Signed-off-by: Andrew Borodin <aborodin@vmail.ru>

--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -20,6 +20,7 @@ libedit_la_SOURCES = \
 	editwidget.c editwidget.h \
 	etags.c etags.h \
 	syntax.c \
+	undoredo.c undoredo.h \
 	wordproc.c
 
 if USE_ASPELL
