Ticket #1984: implement syntax.d for syntax highlighting.
Initial step: port Syntax file to INI format.

NOT FINISHED: see TODO in Syntax.ini.

Signed-off-by: Andrew Borodin <aborodin@vmail.ru>

--- a/misc/syntax/Makefile.am
+++ b/misc/syntax/Makefile.am
@@ -1,6 +1,6 @@
-SYNTAX_IN = Syntax.in
+SYNTAX_IN = Synatx.ini.in
 
-SYNTAX_OUT = Syntax
+SYNTAX_OUT = Syntax.ini
 
 SYNTAXFILES =			\
 	PKGBUILD.syntax		\
